--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(73, 228, 228);
-    
+    border: 15px solid;
     border-radius: 45px;
     border-color: blueviolet;
     
