--- a/styles.css
+++ b/styles.css
@@ -10,27 +10,12 @@
     border-color: blueviolet;
     
     text-align: center;
-    
+    left:-100px;
+    transition: all 2s ease-in-out;
     
 
 }    
-.container > div {
-    
-    
-}
 
-.container #message{
-    
-    border-radius: 10px;
-    
-    margin: auto;
-    border: 5px dashed;
-    border-color: blueviolet;
-    border: auto;
-
-
-
-}
 #enter{
     
     color:blueviolet;
@@ -41,6 +26,7 @@
     border-style: dashed;
     border-color: red;
     font-weight: bolder;
+    padding: 10px;
 
 }
 
@@ -58,6 +44,7 @@ body{
     text-align: center;
     align-items: center;
 
+
 }
 button {
     font-size: 1.5em;
@@ -73,15 +60,28 @@ button {
  }
 
  #message {
+    
     color: black;
     font-size: large;
     text-align: center;
-
+    border-radius: 10px;
+    text-align: center;
+    width: 50%;
+    margin: auto;
+    border: 5px dashed;
+    border-color: blueviolet;
+    
     
 
 }
 
-
+#picture{
+    position: absolute;
+    transition: transform 6s, opacity 5s;
+    transform: translatey(-1000px);
+    width: 50px;
+    height: auto;
+}
     
 
 
